--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- Production Version bitch -->
-  <base href="https://nexoknechthd.github.io/">
+  <base href="https://yourfdp.github.io/">
   <!-- Debug Version bitch -->
   <!-- <base href="/"> -->
 
