--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- Production Version bitch -->
-  <base href="https://yourfdp.github.io/">
+  <!-- <base href="https://yourfdp.github.io/"> -->
   <!-- Debug Version bitch -->
-  <!-- <base href="/"> -->
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
